--- a/backend/src/main/resources/i18n/messages_en_US.properties
+++ b/backend/src/main/resources/i18n/messages_en_US.properties
@@ -191,6 +191,7 @@ authentication_failed=User authentication failed,wrong user name or password
 user_not_found_or_not_unique=User does not exist or is not unique
 find_more_user=Multiple users found
 ldap_authentication_not_enabled=LDAP authentication is not enabled
+sso_authentication_not_enabled=SSO authentication is not enabled
 login_fail_email_null=Login failed, user mailbox is empty
 login_fail_ou_error=Login failed, please check the user OU
 login_fail_filter_error=Login failed, please check the user filter
