--- a/backend/src/main/resources/i18n/messages_zh_CN.properties
+++ b/backend/src/main/resources/i18n/messages_zh_CN.properties
@@ -191,6 +191,7 @@ authentication_failed=用户认证失败,用户名或密码错误
 user_not_found_or_not_unique=用户不存在或者不唯一
 find_more_user=查找到多个用户
 ldap_authentication_not_enabled=LDAP认证未启用
+sso_authentication_not_enabled=SSO认证未启用
 login_fail_email_null=登录失败，用户邮箱为空
 login_fail_ou_error=登录失败，请检查用户OU
 login_fail_filter_error=登录失败，请检查用户过滤器
