--- a/backend/src/main/resources/i18n/messages_zh_TW.properties
+++ b/backend/src/main/resources/i18n/messages_zh_TW.properties
@@ -191,6 +191,7 @@ authentication_failed=用戶認證失敗,用戶名或密碼錯誤
 user_not_found_or_not_unique=用戶不存在或者不唯一
 find_more_user=查找到多個用戶
 ldap_authentication_not_enabled=LDAP認證未啟用
+sso_authentication_not_enabled=SSO認證未啟用
 login_fail_email_null=登錄失敗，用戶郵箱為空
 login_fail_ou_error=登錄失敗，請檢查用戶OU
 login_fail_filter_error=登錄失敗，請檢查用戶過濾器
